--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -21,7 +21,7 @@
 
     {% if sidebar.linkedin %}
     <li class="linkedin"><i class="fab fa-linkedin"></i>
-      <a href="https://linkedin.com/in/{{ sidebar.linkedin }}" target="_blank">{{ sidebar.linkedin }}</a>
+      <a href="https://linkedin.com/in/{{ sidebar.linkedin }}" target="_blank">Dinakaran Sankaranarayanan</a>
     </li>
     {% endif %}
 
